# ev-rental

./: README.md
backend/: .gitignore  CMakeLists.txt  main.cpp
backend/database/: config.json  connection_pool.cpp  connection_pool.h  database.cpp  database.h  database.sql  db_init.cpp  db_init.h
backend/server/: crow_server.cpp  crow_server.h
backend/server/handlers/: comment_handler.cpp  comment_handler.h  image_handler.cpp  image_handler.h  model_handler.cpp  model_handler.h  order_handler.cpp  order_handler.h  user_handler.cpp  user_handler.h  vehicle_handler.cpp  vehicle_handler.h
backend/server/middleware/: cors_middleware.h
backend/server/utils/: jwt_utils.cpp  jwt_utils.h  nlp_utils.cpp  nlp_utils.h  param_utils.cpp  param_utils.h  recommendation_utils.cpp  recommendation_utils.h  time_utils.cpp  time_utils.h  utils.h
frontend/: package-lock.json  package.json  server.js  vue.config.js
frontend/src/: App.vue  main.js
frontend/src/api/: index.js
frontend/src/components/: AddModel.vue  DeleteModel.vue  FooterBar.vue  NavBar.vue  UpdateModel.vue  UserEditDialog.vue  UserProfileDialog.vue
frontend/src/router/: index.js
frontend/src/store/: index.js
frontend/src/store/modules/: cars.js  jwt.js  user.js
frontend/src/views/: CarDetail.vue  CarList.vue  DashBoard.vue  DiscussionPage.vue  ErrorPage.vue  HomeView.vue  LogIn.vue  ModelDetail.vue  ModelList.vue  OrderList.vue  OrderPage.vue  UserPage.vue  VehicleList.vue
nlpserver/: app.py
nlpserver/models/multilingual-sentiment-analysis/: config.json  model.safetensors
nlpserver/models/xlmr-large-toxicity/: config.json  model.safetensors
